--- a/test2_ml.ipynb
+++ b/test2_ml.ipynb
@@ -321,6 +321,7 @@
     "        print(\"Classification Report on Validation:\\n\", classification_report(val_true_labels, val_predictions))\n",
     "        torch.save(model.state_dict(), best_model_path)\n",
     "        print(f\"New best Macro F1-Score: {best_macro_f1:.4f}. Saving model...\")\n",
+    "    else:break\n",
     "\n",
     "print(f\"Best Macro F1-Score achieved on Test set: {best_macro_f1:.4f}\")\n",
     "\n",
