--- a/test2_ml.ipynb
+++ b/test2_ml.ipynb
@@ -163,7 +163,7 @@
     "from tqdm import tqdm\n",
     "from transformers import AutoModel, AutoImageProcessor, AutoModelForImageClassification\n",
     "import torch.nn.functional as F\n",
-    "from models improt MultimodalModel\n",
+    "from models import MultimodalModel\n",
     "\n",
     "\n",
     "\n",
